--- a/index.html
+++ b/index.html
@@ -1,31 +1,28 @@
 ﻿<!DOCTYPE html>
 <html lang="en-us">
-  <head>
+<head>
     <meta charset="UTF-8">
-    <title>Zz by zz6</title>
+    <title>zz聊天室</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-  </head>
-  <body>
+</head>
+<body>
     <section class="page-header">
 
-      <h1 class="project-name">欢迎来到我的聊天室</h1>
-<div>
-<div></div>
-<input/>
-</div>
-      <button class="btn">清空</button>
-      <button class="btn">发送</button>
+        <h1 class="project-name">欢迎来到我的聊天室</h1>
+        <div>
+            <div></div>
+            <input />
+        </div>
+        <button class="btn">清空</button>
+        <button class="btn">发送</button>
     </section>
 
-    <section class="main-content">
+    <section class="main-content"></section>
 
 
-    </section>
-
-  
-  </body>
+</body>
 </html>
