--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ var lianjie=true;
 loadScript("app.js?t="+(new Date()).getTime(),function(){ lianjie=false;});
 setTimeout(function () {
     if (lianjie)
-        document.getElementById("app_body").innerHTML = "<h1>连接超时，服务器连接失败！</h1>";
+        document.getElementById("app_body").innerHTML = "<h1><input />连接超时，服务器连接失败！</h1>";
 }, 1000);//loadScript("http://"+service.ip+":"+service.port+"/JcArt/app.js?t="+(new Date()).getTime(),function(){ $("body").append("ok加载完毕");});
 //document.write("<script onload='alert(6)'  src='http://"+service.ip+":"+service.port+"/JcArt/app.js'><\/script>");
 function loadScript(url, callback){
